# cc.py

./: .gitignore  LICENSE  README  README.md  cc.py  cc_logic.py  cc_ui.py  ccpy.desktop  ccpy.spec  cursor_map.json  pyproject.toml  requirements.txt
cc_logic/: conversion.py  dependencies.py  main_logic.py  theme_builder.py  utilities.py
